--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   .lamp.green{background:rgba(34,197,94,.1);border:1px solid rgba(34,197,94,.35)}.lamp.amber{background:rgba(245,158,11,.1);border:1px solid rgba(245,158,11,.35)}.lamp.red{background:rgba(239,68,68,.1);border:1px solid rgba(239,68,68,.35)}
   .grid{display:grid;gap:8px;margin-top:12px}.guess-row{display:grid;align-items:center;gap:10px;padding:10px;grid-template-columns:auto 1fr auto;border:1px solid #20283a;border-radius:12px;background:#0e1320}
   .year{font-weight:800;letter-spacing:1px}.hint{min-width:120px;text-align:left;color:var(--muted);font-size:.9rem}.status{margin-top:10px;font-weight:700}.success{color:var(--green)}.error{color:var(--red)}
+  h2.title{margin:4px 0 2px 0;font-size:1.35rem}
+  .rules{margin:0;padding-left:18px}
+  .rules li{margin:2px 0}
 </style>
 </head>
 <body>
@@ -34,9 +37,14 @@
 
   <div class="card">
     <div class="row">
-      <div class="col"><img class="portrait" id="portrait" alt="portrait" src=""></div>
+      <div class="col"><img class="portrait" id="portrait" alt="" src=""></div>
       <div class="col">
-        <div class="muted">Guess the <strong>4-digit birth year</strong>. You have 6 tries. 🟩 = correct digit and position. 🟨 = correct digit, incorrect position. 🟥 = incorrect digit. Optional "Warmer🔥/Cooler🧊" hints compare to your <em>previous</em> guess (ties show “No change ◼︎)”.</div>
+        <h2 id="title" class="title">Person Name</h2>
+        <ul class="rules muted">
+          <li>Guess the <strong>4‑digit birth year</strong>. You get <strong>6 tries</strong>.</li>
+          <li>Lamps show counts only: 🟩 correct place, 🟨 right number wrong place, 🟥 wrong number.</li>
+          <li><em>Warmer🔥/Cooler🧊</em> hints compare to your previous guess (ties show “No change ◼︎)”.</li>
+        </ul>
         <div class="controls" style="margin-top:8px;">
           <label class="muted" for="mode">Mode</label>
           <select id="mode"><option>Daily</option><option>Random</option></select>
@@ -77,7 +85,7 @@ function temperatureHint(ans,prev,nw){const pa=Math.abs(ans-prev),ca=Math.abs(an
 function todayIndex(){const d=new Date();const seed=Number(`${d.getFullYear()}${String(d.getMonth()+1).padStart(2,"0")}${String(d.getDate()).padStart(2,"0")}`);return seed%PEOPLE.length}
 let state={mode:"Daily",person:null,answer:"",guesses:[],results:[],over:false,win:false};
 function setImageWithFallback(el,src){el.onerror=()=>{el.style.objectFit='contain';el.style.background='#0e1320';};el.src=src;}
-function pickPerson(mode){const idx=(mode==="Daily")?todayIndex():Math.floor(Math.random()*PEOPLE.length);const p=PEOPLE[idx];state.person=p;state.answer=pad4(p.year);state.guesses=[];state.results=[];state.over=false;state.win=false;setImageWithFallback(document.getElementById("portrait"),p.img);document.getElementById("history").innerHTML="";document.getElementById("status").textContent="";document.getElementById("reveal").style.display="none";document.getElementById("summary").textContent="";document.title=`Whendle — Births (${p.name})`;}
+function pickPerson(mode){const idx=(mode==="Daily")?todayIndex():Math.floor(Math.random()*PEOPLE.length);const p=PEOPLE[idx];state.person=p;state.answer=pad4(p.year);state.guesses=[];state.results=[];state.over=false;state.win=false;setImageWithFallback(document.getElementById("portrait"),p.img);document.getElementById("history").innerHTML="";document.getElementById("status").textContent="";document.getElementById("reveal").style.display="none";document.getElementById("summary").textContent="";document.getElementById("title").textContent=p.name;document.title=`Whendle — Births (${p.name})`;}
 async function fetchSummary(name,fallback){try{const url="https://en.wikipedia.org/api/rest_v1/page/summary/"+encodeURIComponent(name);const r=await fetch(url,{mode:"cors"});if(r.ok){const d=await r.json();if(d&&d.extract)return d.extract}}catch(e){}return fallback||""}
 function addHistoryRow(guess,res,hint){const row=document.createElement("div");row.className="guess-row";const ht=(hint&&hint.trim())?hint:" ";row.innerHTML=`<div class="year">${guess}</div>${lampHTML(res)}<span class="hint">${ht}</span>`;document.getElementById("history").prepend(row);}
 async function finishRound(){const s=document.getElementById("status");if(state.win){s.className="status success";s.textContent=`Correct! ${state.person.name} was born in ${state.answer}.`;}else{s.className="status error";s.textContent=`Out of tries! The correct year was ${state.answer}.`;}const rev=document.getElementById("reveal");const sum=document.getElementById("summary");const t=await fetchSummary(state.person.name,state.person.summary);sum.textContent=t||"(No summary available.)";rev.style.display="block";}
