--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       <div class="col">
         <h2 id="title" class="title">Person Name</h2>
         <ul class="rules muted">
-          <li>Guess the <strong>4‑digit birth year</strong>. You get <strong>6 tries</strong>.</li>
-          <li>Lamps show counts only: 🟩 correct place, 🟨 right number wrong place, 🟥 wrong number.</li>
-          <li><em>Warmer🔥/Cooler🧊</em> hints compare to your previous guess (ties show “No change ◼︎)”.</li>
+          <li>Guess the <strong>4‑digit birth year</strong>. </li>
+          <li>You get <strong>6 tries</strong>.</li>
+          <li>Lamps show counts only: <br>    🟩 correct place </br><br>    🟨 right number wrong place </br><br>    🟥 wrong number.</br></li>
+          <li><em>Warmer</em>🔥/<em></em>Cooler</em>🧊 hints compare to your previous guess (ties show “No change ◼︎)”.</li>
         </ul>
         <div class="controls" style="margin-top:8px;">
           <label class="muted" for="mode">Mode</label>
