--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="col">
         <h2 id="title" class="title">Event Name</h2>
         <ul class="rules muted">
-          <li>Guess the <strong>4‑digit birth year</strong>. </li>
+          <li>Guess the <strong>4‑digit event year</strong>. </li>
           <li>You get <strong>6 tries</strong>.</li>
           <li>Lamps show counts only: <br>🟩 right number, right place</br><br>🟨 right number wrong place</br><br>🟥 wrong number</br></li>
           <li><em>Warmer</em>🔥<em>/Cooler</em>🧊 hints compare to your previous guess (ties show “No change ◼︎)”.</li>
